# CS451-Project

anl/: test_medella.py
anl/myagent/: __init__.py  myagent.py
anl/myagent/helpers/: __init__.py  runner.py
anl2026/: README.md  main.py  make_submission.bat  make_submission.sh  mynegotiator.py  pyproject.toml  restore_git_repos.bat  restore_git_repos.sh
anl2026/examples/: simple.py
anl2026/report/: report.tex
anl2026/tests/: test_examples.py  test_mynegotiator.py
